Ajout des services permetant la récupération des entitées coté serveur. Ajout d'un module permetant d'importer le code source issue d'un serveur distant.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
 
 	<modules>
+		<module>simplex-loader-git</module>
 		<module>simplex-model</module>
 		<module>simplex-parser</module>
 		<module>simplex-storage-api</module>
