--- a/simplex-webapp/.classpath
+++ b/simplex-webapp/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" output="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes" path="src/main/java"/>
 	<classpathentry excluding="**" kind="src" output="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes" path="src/main/resources"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry kind="src" path="src/main/webapp"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
