--- a/simplex-webapp/.settings/com.google.gdt.eclipse.core.prefs
+++ b/simplex-webapp/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,6 +1,6 @@
-#Mon Feb 27 15:29:00 CET 2012
+#Mon Feb 27 16:03:04 CET 2012
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-lastWarOutDir=D\:/Raphael/developpement/java/projet simplex/simplex/simplex-webapp/target/simplex-webapp-1.0-SNAPSHOT
+lastWarOutDir=D\:/Eclipse/java-simplex/simplex-webapp/src/main/webapp
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=false
