--- a/simplex-parser/pom.xml
+++ b/simplex-parser/pom.xml
@@ -31,5 +31,17 @@
 			<artifactId>simplex-model</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0-rc2</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>fr.ubourgogne.simplex</groupId>
+			<artifactId>simplex-loader-git</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
