--- a/simplex-parser/pom.xml
+++ b/simplex-parser/pom.xml
@@ -17,6 +17,20 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0-rc2</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>fr.ubourgogne.simplex</groupId>
+			<artifactId>simplex-loader-git</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>fr.ubourgogne.simplex</groupId>
 			<artifactId>simplex-storage-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
