--- a/simplex-webapp/pom.xml
+++ b/simplex-webapp/pom.xml
@@ -177,6 +177,12 @@
 			<artifactId>simplex-model</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>fr.ubourgogne.simplex</groupId>
+			<artifactId>simplex-loader-git</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
