--- a/simplex-webapp/pom.xml
+++ b/simplex-webapp/pom.xml
@@ -177,7 +177,11 @@
 			<artifactId>simplex-model</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>fr.ubourgogne.simplex</groupId>
+			<artifactId>simplex-parser</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>fr.ubourgogne.simplex</groupId>
 			<artifactId>simplex-loader-git</artifactId>
