--- a/simplex-webapp/.classpath
+++ b/simplex-webapp/.classpath
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="fr/ubourgogne/simplex/webapp/client/utils/img/" kind="src" output="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes" path="src/main/java"/>
+	<classpathentry kind="src" output="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes" path="src/main/java"/>
 	<classpathentry excluding="**" kind="src" output="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes" path="src/main/resources"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry excluding="SimplEx/|formated/" kind="src" path="src/main/webapp"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
@@ -11,10 +10,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="src" output="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes" path="target/generated-sources/apt">
-		<attributes>
-			<attribute name="optional" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="output" path="target/simplex-webapp-1.0-SNAPSHOT/WEB-INF/classes"/>
 </classpath>
