--- a/simplex-webapp/pom.xml
+++ b/simplex-webapp/pom.xml
@@ -176,6 +176,7 @@
 			<groupId>fr.ubourgogne.simplex</groupId>
 			<artifactId>simplex-model</artifactId>
 			<version>1.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>fr.ubourgogne.simplex</groupId>
@@ -194,53 +195,35 @@
 		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
 
 		<plugins>
-			<!-- requestfactory-apt runs an annotation processor (APT) to instrument 
-				its service interfaces so that RequestFactoryServer can decode client requests. 
-				Normally you would just have a dependency on requestfactory-apt with <scope>provided</scope>, 
-				but that won't work in eclipse due to m2e bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=335036 -->
 			<!-- <plugin> -->
-			<!-- <groupId>org.bsc.maven</groupId> -->
-			<!-- <artifactId>maven-processor-plugin</artifactId> -->
-			<!-- <version>2.0.5</version> -->
+			<!-- <groupId>org.apache.maven.plugins</groupId> -->
+			<!-- <artifactId>maven-dependency-plugin</artifactId> -->
+
 			<!-- <executions> -->
 			<!-- <execution> -->
-			<!-- <id>process</id> -->
+			<!-- <id>unpack</id> -->
+			<!-- <phase>initialize</phase> -->
 			<!-- <goals> -->
-			<!-- <goal>process</goal> -->
+			<!-- <goal>unpack</goal> -->
+			<!-- <goal>build-classpath</goal> -->
 			<!-- </goals> -->
-			<!-- <phase>generate-sources</phase> -->
+			<!-- <configuration> -->
+			<!-- <artifactItems> -->
+			<!-- <artifactItem> -->
+			<!-- <groupId>fr.ubourgogne.simplex</groupId> -->
+			<!-- <artifactId>simplex-model</artifactId> -->
+			<!-- <version>1.0-SNAPSHOT</version> -->
+			<!-- <classifier>sources</classifier> -->
+			<!-- <overWrite>true</overWrite> -->
+			<!-- <outputDirectory>${project.build.directory}/com.myproject.shared</outputDirectory> -->
+			<!-- </artifactItem> -->
+			<!-- </artifactItems> -->
+			<!-- </configuration> -->
 			<!-- </execution> -->
 			<!-- </executions> -->
-			<!-- <dependencies> -->
-			<!-- <dependency> -->
-			<!-- <groupId>com.google.web.bindery</groupId> -->
-			<!-- <artifactId>requestfactory-apt</artifactId> -->
-			<!-- <version>${gwtVersion}</version> -->
-			<!-- </dependency> -->
-			<!-- </dependencies> -->
 			<!-- </plugin> -->
 
-			<!-- Google Plugin for Eclipse (GPE) won't see the source generated above 
-				by requestfactory-apt unless it is exposed as an additional source dir -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.7</version>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${project.build.directory}/generated-sources/apt</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+
 
 			<!-- GWT Maven Plugin -->
 			<plugin>
@@ -263,6 +246,11 @@
 						<artifactId>gwt-servlet</artifactId>
 						<version>${gwtVersion}</version>
 					</dependency>
+					<dependency>
+						<groupId>fr.ubourgogne.simplex</groupId>
+						<artifactId>simplex-model</artifactId>
+						<version>1.0-SNAPSHOT</version>
+					</dependency>
 				</dependencies>
 				<!-- JS is only needed in the package phase, this speeds up testing -->
 				<executions>
@@ -283,8 +271,14 @@
 					<!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
 					<compileReport>true</compileReport>
 
+
+					<!-- BON BAH CA CEST MOCHE! MAIS C'EST GRACE A CA QUE CA MARCHE :) -->
+					<sourceDirectory>../simplex-model/src/main/java</sourceDirectory>
+					<sourceDirectory>src/main/java</sourceDirectory>
+
+
 					<!-- chemin vers le <module>.gwt.xml -->
-					<module>fr.ubourgogne.simplex.application.SimplEx</module>
+					<module>fr.ubourgogne.simplex.webapp.SimplEx</module>
 
 					<logLevel>INFO</logLevel>
 					<style>${gwt.style}</style>
@@ -313,6 +307,13 @@
 						</configuration>
 					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>fr.ubourgogne.simplex</groupId>
+						<artifactId>simplex-model</artifactId>
+						<version>1.0-SNAPSHOT</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<!-- Mark the project for Google Plugin for Eclipse (GPE) -->
